fix: corrige erros de método do backend